Styled Attendance Table & Added Select Week
- Made the table center aligned when changing width of screen (it would
be shifted when resizing previously)
- Gave table a style
- Added Select Week, currently only could see one week at a time. Open
for opinions on best approach. Choosing to only show one week at a time
makes their total attendance only a weekly value.

--- a/Project/attendance.html
+++ b/Project/attendance.html
@@ -19,14 +19,20 @@
 		<span class="title">Select to view Attendance</span>
 		<p></p>
 				<p>Class<select name="selectclass" id="">
-					<option value="cake">Lets Bake Cakes lvl1</option>
-					<option value="cake">Lets Bake Cakes lvl2</option>
+					<option value="cake">Lets Bake Cakes lvl 1</option>
+					<option value="cake">Lets Bake Cakes lvl 2</option>
 					<option value="cake">Lets Bake Cakes lvl 3</option>
-					<option value="cake">Lets Bake Cakes lvl4</option>
-					<option value="dogtrainer">Lets Train Dogs lvl1</option>
-					<option value="dogtrainer">Lets Train Dogs lvl2</option>
+					<option value="cake">Lets Bake Cakes lvl 4</option>
+					<option value="dogtrainer">Lets Train Dogs lvl 1</option>
+					<option value="dogtrainer">Lets Train Dogs lvl 2</option>
 					<option value="dogtrainer">Lets Train Dogs lvl 3</option>
-					<option value="dogtainer">Lets Train Dogs lvl4</option>
+					<option value="dogtainer">Lets Train Dogs lvl 4</option>
+				</select></p>
+				<p>Week<select name="selectweek" id="">
+					<option value="week">Week 1</option>
+					<option value="week">Week 2</option>
+					<option value="week">Week 3</option>
+					<option value="week">Week 4</option>
 				</select></p>
 	
 	</div><!--content-->
