--- a/Project/attendance.html
+++ b/Project/attendance.html
@@ -10,9 +10,10 @@
 		<span class="title">Attendance</span>
 		</div><!--banner-->
 	<div id="navbar">
-		<div class="nav"><a href="#">Page 1</a></div>
-		<div class="nav"><a href="#">Page 2</a></div>
-		<div class="nav"><a href="#">Page 3</a></div>
+		<div class="nav"><a href="teacher_home.html">Home</a></div>
+		<div class="nav"><a href="attendance.html">Attendance</a></div>
+		<div class="nav"><a href="awards.html">Awards</a></div>
+		<div class="nav"><a href="create_a_class.html">Create Class</a></div>
 		<div id="login" class="nav"><a href="login.html">Log In</a></div>
 	</div><!--navbar-->
 	<div id="content">
