--- a/Project/cooking_course_info.html
+++ b/Project/cooking_course_info.html
@@ -42,13 +42,13 @@
 						<li class = "listK"> 1) Monthly payment of $30</li>
 						<li class = "listK"> 2) One up-front payment of $150</li>
 					</ul>
-				</li class = "listK">
+				</li>
 				<li class = "listK"><a href = "awards_studentview.html">Awards/Certifications</a></li>
 				<li class = "listK">Current Attendees:
 					<ul>
 						<li> student1</li>
 						<li> student2</li>
-						<li> etc.
+						<li> etc.    </li>
 					</ul>
 				</li>
 			</ul>
