A few changes to Awards and Stylesheet
- Got rid of empty style tags in heads of a couple files that I noticed
them in.
- Did a couple tweaks to the titles on the awards page.
- Changed the color of font in the table to make them readable.

--- a/Project/awards.html
+++ b/Project/awards.html
@@ -4,10 +4,6 @@
 <head>
 	<title>Monet Mall</title>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<style type="text/css">
-
-
-	</style>
 </head>
 
 <body>
@@ -27,7 +23,8 @@
 
 		<div id="contentK">
 
-			<span class="titleK">Cooking For Dummies Certifications</span>
+			<span class="titleK">Cooking For Dummies</span><br/>
+			<span class="title">Certifications</span>
 			<ul>
 				<li class = "listK">Beginner Chef
 					<ul>
