Banner image & Awards page tweaks
- Made a Banner Image
- Removed Banner text
- Gave Awards page same layout as other pages
- Added example names used on other pages to Awards table
- Added buttons and corresponding pages for Issuing Awards succeeding
or failing

--- a/Project/awards_fail.html
+++ b/Project/awards_fail.html
@@ -21,7 +21,7 @@
 
 		<div id="content">
 
-			<span class="title">Cooking For Dummies</span><br/>
+			<span class="error">Issuing Award Failed. Try again.</span><br/>
 			<span class="title">Certifications</span>
 			<ul>
 				<li class = "listK">Beginner Chef
