--- a/Project/awards_studentview.html
+++ b/Project/awards_studentview.html
@@ -8,9 +8,7 @@
 
 <body>
 	<div id="container">
-		<div id="banner">
-		<span class="title">Banner Image</span>
-		</div>
+		<div id="banner"></div>
 
 		<div id="navbar">
 			<div class="nav"><a href="student_home.html">Home</a></div>
@@ -19,9 +17,9 @@
 
 		</div>
 
-		<div id="contentK">
+		<div id="content">
 
-			<span class="titleK">Cooking For Dummies Certifications</span>
+			<span class="title">Cooking For Dummies Certifications</span>
 			<ul>
 				<li class = "listK">Beginner Chef
 					<ul>
@@ -49,64 +47,47 @@
 				<li class = "listK">etc.</li>
 			</ul>
 
-			<div class = "tableK">
-				<table>
+			<table class = "tableK">
 
-					<tr>
-						<th>Certification      </th><th></th><th>      Student Name</th>
-					</tr>
+				<tr>
+					<th>Certification      </th><th></th><th>      Student Name</th>
+				</tr>
 
-					<tr>
-						<td>Beginner Chefs:</td><td></td><td></td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student1</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student2</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student3</td>
-					</tr>
-					<tr>
-						<td>Intermediate Chefs:</td><td></td><td></td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student1</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student2</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student3</td>
-					</tr>
-					<tr>
-						<td>Head Chefs:</td><td></td><td></td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student1</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student2</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student3</td>
-					</tr>
-					<tr>
-						<td>Master Chefs:</td><td></td><td></td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student1</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student2</td>
-					</tr>
-					<tr>
-						<td></td><td></td><td>Student3</td>
-					</tr>
-				</table>
+				<tr>
+					<td>Beginner Chefs:</td><td></td><td></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Alice</a></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Bob</a></td>
+				</tr>
+				<tr>
+					<td>Intermediate Chefs:</td><td></td><td></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Alice</a></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Bob</a></td>
+				</tr>
+				<tr>
+					<td>Head Chefs:</td><td></td><td></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Alice</a></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Bob</a></td>
+				</tr>
+				<tr>
+					<td>Master Chefs:</td><td></td><td></td>
+				</tr>
+				<tr>
+					<td></td><td></td><td><a href ="#" >Alice</a></td>
+				</tr>
+			</table>
 
-			</div>
 		</div>
 		
 	</div>	
