--- a/Project/cooking_course_info.html
+++ b/Project/cooking_course_info.html
@@ -12,9 +12,7 @@
 
 <body>
 	<div id="container">
-		<div id="banner">
-		<span class="title">Banner Image</span>
-		</div>
+		<div id="banner"></div>
 
 		<div id="navbar">
 			<div class="nav"><a href="#">Home</a></div>
@@ -23,9 +21,9 @@
 
 		</div>
 
-		<div id="contentK">
+		<div id="content">
 
-			<span class="titleK">Course Info</span>
+			<span class="title">Course Info</span>
 			<ul>
 				<li class = "listK">Course Name: Cooking For Dummies</li>
 				<li class = "listK">Instructor:  James Bond</li>
@@ -46,8 +44,8 @@
 				<li class = "listK"><a href = "awards_studentview.html">Awards/Certifications</a></li>
 				<li class = "listK">Current Attendees:
 					<ul>
-						<li> student1</li>
-						<li> student2</li>
+						<li> Alice</li>
+						<li> Bob</li>
 						<li> etc.    </li>
 					</ul>
 				</li>
