--- a/Project/create_a_class.html
+++ b/Project/create_a_class.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="banner">
-				<span class="title">Banner Image</span>
-			</div>
+			<div id="banner"></div>
 			<div id="navbar">
 				<div class="nav"><a href="teacher_home.html">Home</a></div>
 				<div class="nav"><a href="attendance.html">Attendance</a></div>
@@ -51,7 +49,7 @@
 					
 					<h3>Class Description:</h3>
 					<p>	
-						<textarea id="class_description" class="text-input" form="form-id" rows="5" cols="35"></textarea><br/><br/>	
+						<textarea id="class_description" class="text-input" form="form-id" rows="5" cols="35"></textarea><br/><br/><br/><br/>	
 					</p>
 					
 					<div id="button-area">
