--- a/Project/create_fail.html
+++ b/Project/create_fail.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="banner">
-				<span class="title">Banner Image</span>
-			</div>
+			<div id="banner"></div>
 			<div id="navbar">
 				<div class="nav"><a href="teacher_home.html">Home</a></div>
 				<div class="nav"><a href="attendance.html">Attendance</a></div>
@@ -17,7 +15,7 @@
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
-				<span class="error">The class was not created do to lack of information. Please try again.</span>
+				<span class="error">The class was not created due to lack of information. Please try again.</span>
 				<span class="title">Create a class:</span>
 				<form id="form-id" method="POST" action="http://webdevbasics.net/scripts/demo.php">
 					<h3>General Info:</h3>
@@ -55,7 +53,7 @@
 					
 					<h3>Class Description:</h3>
 					<p>	
-						<textarea id="class_description" class="text-input" form="form-id" rows="5" cols="35"></textarea><br/><br/>	
+						<textarea id="class_description" class="text-input" form="form-id" rows="5" cols="35"></textarea><br/><br/><br/><br/>	
 					</p>
 					
 					<div id="button-area">
