--- a/Project/achievements.html
+++ b/Project/achievements.html
@@ -8,40 +8,28 @@
 
 <body>
 	<div id="container">
-		<div id="banner">
-		<span class="title">Banner Image</span>
-		</div>
+		<div id="banner"></div>
 
 		<div id="navbar">
 			<div class="nav"><a href="student_home.html">Home</a></div>
 			<div class="nav"><a href="achievements.html">Achievements</a></div>
 			<div id="login" class="nav"><a href="login.html">Log Out</a></div>
-
 		</div>
 
-		<div id="contentK">
-
-			<span class="titleK">Achievements</span>
+		<div id="content">
+			<span class="title">Achievements</span>
 			<p>These are all of the awards/certifications you've recieved:</p>
 			<ul>
 				<li class = "listK">Cooking For Dummies
 					<ul>
-						<li class = "listK">* Beginner Chef</li>
-						<li class = "listK">* Intermediate Chef</li>
+						<li>Beginner Chef</li>
+						<li>Intermediate Chef</li>
 					</ul>		
 				</li>
-
-
 			</ul>
-
 			<p> Congratulations!</p>
-
-
-		</div>
-		
-	</div>	
-	
+		</div>		
+	</div>		
 </body>
-
 
 </html>
