--- a/Project/awards_success.html
+++ b/Project/awards_success.html
@@ -21,7 +21,7 @@
 
 		<div id="content">
 
-			<span class="title">Cooking For Dummies</span><br/>
+			<span class="success">Award Issued Successfully!</span><br/>
 			<span class="title">Certifications</span>
 			<ul>
 				<li class = "listK">Beginner Chef
