--- a/Project/login_fail.html
+++ b/Project/login_fail.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="banner">
-				<span class="title">Banner Image</span>
-			</div>
+			<div id="banner"></div>
 			<div id="content">
 				<span class="error">Username/Password was invalid. Please try again.</span>
 				<form id="form-id" method="POST" action="http://webdevbasics.net/scripts/demo.php">
