--- a/Project/register_success.html
+++ b/Project/register_success.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="banner">
-				<span class="title">Banner Image</span>
-			</div>
+			<div id="banner"></div>
 			<div id="content">
 				<span class="success">Registration complete! Please log in.</span>
 				<span class="title">Log In</span>
