--- a/Project/teacher_home.html
+++ b/Project/teacher_home.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="banner">
-				<span class="title">Banner Image</span>
-			</div>
+			<div id="banner"></div>
 			<div id="navbar">
 				<div class="nav"><a href="teacher_home.html">Home</a></div>
 				<div class="nav"><a href="attendance.html">Attendance</a></div>
