--- a/Project/attendance.html
+++ b/Project/attendance.html
@@ -6,71 +6,74 @@
 </head>
 <body>
 	<div id="container">
-		<div id="banner"></div><!--banner-->
+		<div id="banner">
+		<span class="title">Attendance</span>
+		</div><!--banner-->
 	<div id="navbar">
 		<div class="nav"><a href="teacher_home.html">Home</a></div>
-		<div class="nav"><a href="attendance.html">Attendance</a></div>
-		<div class="nav"><a href="awards.html">Awards</a></div>
-		<div class="nav"><a href="create_a_class.html">Create Class</a></div>
-		<div id="login" class="nav"><a href="login.html">Log Out</a></div>
+				<div class="nav"><a href="attendance.html">Attendance</a></div>
+				<div class="nav"><a href="awards.html">Awards</a></div>
+				<div class="nav"><a href="create_a_class.html">Create Class</a></div>
+				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 	</div><!--navbar-->
 	<div id="content">
 		<span class="title">Select to view Attendance</span>
 		<p></p>
-				<p>Class<select name="selectclass" id="">
-					<option value="cake">Lets Bake Cakes lvl 1</option>
-					<option value="cake">Lets Bake Cakes lvl 2</option>
-					<option value="cake">Lets Bake Cakes lvl 3</option>
-					<option value="cake">Lets Bake Cakes lvl 4</option>
-					<option value="dogtrainer">Lets Train Dogs lvl 1</option>
-					<option value="dogtrainer">Lets Train Dogs lvl 2</option>
-					<option value="dogtrainer">Lets Train Dogs lvl 3</option>
-					<option value="dogtainer">Lets Train Dogs lvl 4</option>
-				</select></p>
-				<p>Week<select name="selectweek" id="">
-					<option value="week">Week 1</option>
-					<option value="week">Week 2</option>
-					<option value="week">Week 3</option>
-					<option value="week">Week 4</option>
-				</select></p>
-	
+			<div class="classSelect">
+				<nav>
+				<ul>
+					<li><a href="#">Select Class</a>
+						<ul>
+							<li><a href="attendance_cooking.html">Cooking For Dumming</a>
+								<ul>
+									<li>
+										<a href="attendance_cooking_week1.html">Week 1</a>
+									</li>
+									<li>
+										<a href="#">Week 2</a>
+									</li>
+									<li>
+										<a href="#">Week 3</a>
+									</li>
+									<li>
+										<a href="#">Week 4</a>
+									</li>
+									<li>
+										<a href="#">Week 5</a>
+									</li>
+									<li>
+										<a href="#">Week 6</a>
+									</li>
+									<li>
+										<a href="#">Week 7</a>
+									</li>
+									<li>
+										<a href="#">Week 8</a>
+									</li>
+									<li>
+										<a href="#">Week 9</a>
+									</li>
+									<li>
+										<a href="#">Week 10</a>
+									</li>
+									<li>
+										<a href="#">Week 11</a>
+									</li>
+									<li>
+										<a href="#">Week 12</a>
+									</li>
+								</ul>
+							</li>
+							<li><a href="attendance_learning.html">Learning 101</a></li>
+							<li><a href="attendance_bunnies.html">Bunnies Anonymous</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+		</div><!--classSelect-->
 	</div><!--content-->
 
-	<div class="attendanceContainer">
-		<table>
-			<tr>
-				<th>Name</th>
-				<th>Monday</th>
-				<th>Tuesday</th>
-				<th>Wednesday</th>
-				<th>Thursday</th>
-				<th>Friday</th>
-				<th>Attendance</th>
-			</tr>
-			<tr>
-				<th>Alice</th>
-				<th>1</th>
-				<th>0</th>
-				<th>1</th>
-				<th>0</th>
-				<th>1</th>
-				<th>3</th>
-			</tr>
-
-			<tr>
-				<th>Bob</th>
-				<th>1</th>
-				<th>0</th>
-				<th>0</th>
-				<th>0</th>
-				<th>0</th>
-				<th>1</th>
-			</tr>
-
-		</table>
-
-	</div>
-
+	
 
 	</div><!--contaienr-->
 
