--- a/Project/attendance_cooking_week1.html
+++ b/Project/attendance_cooking_week1.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="banner">
-		<span class="title">Attendance</span>
-		</div><!--banner-->
+		<div id="banner"></div><!--banner-->
 	<div id="navbar">
 		<div class="nav"><a href="teacher_home.html">Home</a></div>
 				<div class="nav"><a href="attendance.html">Attendance</a></div>
