Individual Student & Class pages made.
- Created example pages for when a teacher clicks on a student's name
(Alice or Bob) in the Attendance / Awards pages
- Added links to Class pages from Student and Teacher home's, as well as
from individual student pages
- Made link from Class page to teacher/student awards pages

--- a/Project/attendance_cooking_week1.html
+++ b/Project/attendance_cooking_week1.html
@@ -30,7 +30,7 @@
 				<th>Attendance</th>
 			</tr>
 			<tr>
-				<th>Alice</th>
+				<th><a href="student_individual_Alice.html">Alice</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>1</th>
@@ -38,7 +38,7 @@
 				<th>1</th>
 				<th>3</th>
 			</tr>
-			<th>Alison</th>
+			<th><a href="#">Alison</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>1</th>
@@ -46,7 +46,7 @@
 				<th>1</th>
 				<th>3</th>
 			</tr>
-			<th>Ally</th>
+			<th><a href="#">Ally</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>1</th>
@@ -56,7 +56,7 @@
 			</tr>
 
 			<tr>
-				<th>Bobbypin</th>
+				<th><a href="#">Bobbypin</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -64,7 +64,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bobbin</th>
+			<th><a href="#">Bobbin</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -72,7 +72,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bobsen</th>
+			<th><a href="#">Bobsen</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -80,7 +80,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Robert</th>
+			<th><a href="#">Robert</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -88,7 +88,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bob</th>
+			<th><a href="student_individual_Bob.html">Bob</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -96,7 +96,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bode</th>
+			<th><a href="#">Bode</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -104,7 +104,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bobbie</th>
+			<th><a href="#">Bobbie</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
@@ -112,7 +112,7 @@
 				<th>0</th>
 				<th>1</th>
 			</tr>
-			<th>Bobby</th>
+			<th><a href="#">Bobby</a></th>
 				<th>1</th>
 				<th>0</th>
 				<th>0</th>
