--- a/Project/student_individual_Bob.html
+++ b/Project/student_individual_Bob.html
@@ -8,12 +8,14 @@
 		<div id="container">
 			<div id="banner"></div>
 			<div id="navbar">
-				<div class="nav"><a href="student_home.html">Home</a></div>
-				<div class="nav"><a href="achievements.html">Achievements</a></div>
+				<div class="nav"><a href="teacher_home.html">Home</a></div>
+				<div class="nav"><a href="attendance.html">Attendance</a></div>
+				<div class="nav"><a href="awards.html">Awards</a></div>
+				<div class="nav"><a href="create_a_class.html">Create Class</a></div>
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
-				<span class="title">Home</span>
+				<span class="title">Bob</span>
 				<h2 class="home_title">Account Charges:</h2>
 				<div class="home_item subsection">
 					<p>Charges:</p>
@@ -23,7 +25,7 @@
 				</div>
 				<h2 class="home_title">Classes:</h2>
 				<div class="home_item subsection">
-				<h3 class="home_title"><a href="cooking_course_info.html">Cooking for Dummies</a></h3> 
+				<h3 class="home_title"><a href="cooking_course_info_teacher.html">Cooking for Dummies</a></h3> 
 					<ul>
 						<li>Instructor:  James Bond</li>
 						<li>jbond@cooking.edu</li>
@@ -36,6 +38,14 @@
 						<li>Instructor:  Wayne Gretzky</li>
 						<li>thegreatone@learning.edu</li>
 						<li>Meeting time & place: Mondays & Wednesdays 2:50 p.m. in EMS 110</li>
+					</ul>
+				</div>
+				<h2 class="home_title">Awards:</h2>
+				<div class="home_item subsection">
+				<h3 class="home_title"><a href="cooking_course_info_teacher.html">Cooking for Dummies</a></h3> 
+					<ul>
+						<li>Beginner Chef</li>
+						<li>Intermediate Chef</li>
 					</ul>
 				</div>
 			</div>
