--- a/Project/teacher_home.html
+++ b/Project/teacher_home.html
@@ -17,7 +17,7 @@
 			<div id="content">
 				<span class="title">Home</span>
 				<div class="home_item subsection">
-				<h3 class="home_title">Bunnies Anonymous</h3> 
+				<h3 class="home_title"><a href="cooking_course_info_teacher.html">Cooking for Dummies</a></h3> 
 					<ul>
 						<li>12/89 of your students showed up to class this past week</li>
 						<li>This class is currently in week 9 of 15</li>
