--- a/Project/awards_fail.html
+++ b/Project/awards_fail.html
@@ -60,34 +60,31 @@
 					<td>Beginner Chefs:</td><td></td><td></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Alice</a></td>
+					<td></td><td></td><td><a href ="student_individual_Alice.html" >Alice</a></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Bob</a></td>
+					<td></td><td></td><td><a href ="student_individual_Bob.html" >Bob</a></td>
 				</tr>
 				<tr>
 					<td>Intermediate Chefs:</td><td></td><td></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Alice</a></td>
+					<td></td><td></td><td><a href ="student_individual_Alice.html" >Alice</a></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Bob</a></td>
+					<td></td><td></td><td><a href ="student_individual_Bob.html" >Bob</a></td>
 				</tr>
 				<tr>
 					<td>Head Chefs:</td><td></td><td></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Alice</a></td>
-				</tr>
-				<tr>
-					<td></td><td></td><td><a href ="#" >Bob</a></td>
+					<td></td><td></td><td><a href ="student_individual_Alice.html" >Alice</a></td>
 				</tr>
 				<tr>
 					<td>Master Chefs:</td><td></td><td></td>
 				</tr>
 				<tr>
-					<td></td><td></td><td><a href ="#" >Alice</a></td>
+					<td></td><td></td><td><a href ="student_individual_Alice.html" >Alice</a></td>
 				</tr>
 			</table>
 
