--- a/Project/register_teacher_fail.html
+++ b/Project/register_teacher_fail.html
@@ -22,11 +22,8 @@
 					<label for="verify-id">Teacher Verification Code:</label>
 					<input id="verify-id" class="text-input" type="text" name="verify" /><br/><br/>
 					
-					<label>Select Classes:</label><br/>
-					<input class="checkbox-input" type="checkbox" name="class-type" value="dog-trainer"><span class="checkbox-input">Dog Trainer</span><br/>
-					<input class="checkbox-input" type="checkbox" name="class-type" value="fitness-guru"><span class="checkbox-input">Fitness Guru</span><br/>
-					<input class="checkbox-input" type="checkbox" name="class-type" value="cake-decorator"><span class="checkbox-input">Cake Decorator</span><br/>
-					<input class="checkbox-input" type="checkbox" name="class-type" value="martial-arts"><span class="checkbox-input">Martial Arts Dojo</span><br/><br/>
+					<label for="instructor_type">Instructor Type:</label><br/>
+					<input id="instructor_type" class="text-input" type="text" name="verify" placeholder="Ex: Dog Trainer, Tutor ..."/><br/><br/>
 					
 					<label for="username-id">Username:</label>
 					<input id="username-id" class="text-input" type="text" name="username" /><br/><br/>
