Rough admin home page
Just create a quick layout of the admin home page

--- a/Project/login.html
+++ b/Project/login.html
@@ -21,6 +21,7 @@
 						<optgroup label="Status">
 							<option value="student">Student</option>
 							<option value="teacher">Teacher</option>
+							<option value="admin">Admin</option>
 						</optgroup>
 					</select><br/><br/>
 					
@@ -28,9 +29,8 @@
 						<button id="submit-id" type="submit">Submit</button><br/><br/>
 						<a class="button" href="student_home.html">Login Success Student</a><br/><br/>
 						<a class="button" href="teacher_home.html">Login Success Teacher</a><br/><br/>
+						<a class="button" href="admin_home.html">Login Success Admin</a><br/><br/>
 						<a class="button" href="login_fail.html">Login Fail</a><br/><br/>
-						<a class="button" href="register_student.html">Register (Student)</a><br/><br/>
-						<a class="button" href="register_teacher.html">Register (Teacher)</a><br/>
 					</div>
 				</form>
 			</div>
