--- a/Project/edit_a_class.html
+++ b/Project/edit_a_class.html
@@ -8,9 +8,10 @@
 		<div id="container">
 			<div id="banner"></div>
 			<div id="navbar">
-				<div class="nav"><a href="admin_home.html">Home</a></div>
+				<div class="nav"><a href="teacher_home.html">Home</a></div>
+				<div class="nav"><a href="attendance.html">Attendance</a></div>
+				<div class="nav"><a href="awards.html">Awards</a></div>
 				<div class="nav"><a href="create_a_class.html">Create Class</a></div>
-				<div class="nav"><a href="create_a_instructor.html">Create Instructor</a></div>
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
