Created a create instructor page
Created a page for an admin to create an instructor

--- a/Project/create_instructor_success.html
+++ b/Project/create_instructor_success.html
@@ -14,9 +14,7 @@
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
-				<span class="title">Home</span><br/><br/>
-				<div class="home_button"><a href="create_a_class.html">Create Class</a></div>
-				<div class="home_button"><a href="create_instructor.html">Create Instructor</a></div>
+				<span class="success">Instructor JOHN DOE was created successfully!</span><br/><br/>
 			</div>
 		</div>
 	</body>
