--- a/Project/cooking_course_info_teacher.html
+++ b/Project/cooking_course_info_teacher.html
@@ -18,7 +18,7 @@
 			<div class="nav"><a href="teacher_home.html">Home</a></div>
 			<div class="nav"><a href="attendance.html">Attendance</a></div>
 			<div class="nav"><a href="awards.html">Awards</a></div>
-                        <div class="nav"><a href="create_student.html">Create Student</a></div>
+                        <div class="nav"><a href="register_student.html">Register Student</a></div>
 			<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 		</div>
 
