--- a/Project/register_student.html
+++ b/Project/register_student.html
@@ -8,6 +8,15 @@
 		<div id="container">
 			<div id="banner"></div>
 			<div id="content">
+				<div id="navbar">
+                        		<div class="nav"><a href="teacher_home.html">Home</a></div>
+                        		<div class="nav"><a href="attendance.html">Attendance</a></div>
+                        		<div class="nav"><a href="awards.html">Awards</a></div>
+                        		<div class="nav"><a href="register_student.html">Register Student</a></div>
+                        		<div id="login" class="nav"><a href="login.html">Log Out</a></div>
+                		</div>
+
+
 				<span class="title">Register</span>
 				<form id="form-id" method="POST" action="http://webdevbasics.net/scripts/demo.php">
 					<label for="firstname-id">First Name:</label>
