--- a/Project/cooking_course_info_teacher.html
+++ b/Project/cooking_course_info_teacher.html
@@ -2,59 +2,61 @@
 <html>
 
 <head>
-	<title>Monet Mall</title>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<style type="text/css">
+        <title>Monet Mall</title>
+        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <style type="text/css">
 
 
-	</style>
+        </style>
 </head>
 
 <body>
-	<div id="container">
-		<div id="banner"></div>
+        <div id="container">
+                <div id="banner"></div>
 
-		<div id="navbar">
-			<div class="nav"><a href="teacher_home.html">Home</a></div>
-			<div class="nav"><a href="attendance.html">Attendance</a></div>
-			<div class="nav"><a href="awards.html">Awards</a></div>
+                <div id="navbar">
+                        <div class="nav"><a href="teacher_home.html">Home</a></div>
+                        <div class="nav"><a href="attendance.html">Attendance</a></div>
+                        <div class="nav"><a href="awards.html">Awards</a></div>
                         <div class="nav"><a href="register_student.html">Register Student</a></div>
-			<div id="login" class="nav"><a href="login.html">Log Out</a></div>
-		</div>
+                        <div id="login" class="nav"><a href="login.html">Log Out</a></div>
+                </div>
 
-		<div id="content">
+                <div id="content">
 
-			<span class="title">Course Info</span>
-			<ul>
-				<li class = "listK">Course Name: Cooking For Dummies</li>
-				<li class = "listK">Instructor:  James Bond</li>
-				<li class = "listK">Instructor Info:
-					<ul>
-						<li> email address: jbond@cooking.edu</li>
-						<li> phone number: 1 (111) 111-1111</li>
-					</ul>
-				</li>
-				<li class = "listK">Time: Tuesdays/Thursdays, 8:30 p.m.</li>
-				<li class = "listK">Course length:  6 months</li>
-				<li class = "listK">Available Payment Plans:
-					<ul>
-						<li class = "listK"> 1) Monthly payment of $30</li>
-						<li class = "listK"> 2) One up-front payment of $150</li>
-					</ul>
-				</li>
-				<li class = "listK"><a href = "awards.html">Awards/Certifications</a></li>
-				<li class = "listK">Current Attendees:
-					<ul>
-						<li> Alice</li>
-						<li> Bob</li>
-						<li> etc.    </li>
-					</ul>
-				</li>
-			</ul>
+                        <span class="title">Course Info</span>
+                        <ul>
+                                <li class = "listK">Course Name: Cooking For Dummies</li>
+                                <li class = "listK">Instructor: James Bond</li>
+                                <li class = "listK">Instructor Info:
+                                        <ul>
+                                                <li> email address: jbond@cooking.edu</li>
+                                                <li> phone number: 1 (111) 111-1111</li>
+                                        </ul>
+                                </li>
+                                <li class = "listK">Time: Tuesdays/Thursdays, 8:30 p.m.</li>
+                                <li class = "listK">Course length: 6 months</li>
+                                <li class = "listK">Available Payment Plans:
+                                        <ul>
+                                                <li class = "listK"> 1) Monthly payment of $30</li>
+                                                <li class = "listK"> 2) One up-front payment of $150</li>
+                                        </ul>
+                                </li>
+                                <li class = "listK"><a href = "awards.html">Awards/Certifications</a></li>
+                                <li class = "listK">Current Attendees:
+                                        <ul>
+                                                <li> Alice</li>
+                                                <li> Bob</li>
+                                                <li> etc. </li>
+                                        </ul>
+                                </li>
+				
+                        </ul>
+			<div id = "login"><a href = "edit_a_class.html">Edit Course Info</a></div>
 
-		</div>
-	
-	</div>
+                </div>
+        
+        </div>
 
 </body>
 
