Fixed issue where wrong links were shown
Login fail page showed incorrect links. Fixed.

--- a/Project/login_fail.html
+++ b/Project/login_fail.html
@@ -24,14 +24,13 @@
                     </optgroup>
                 </select><br/><br/>
                 
-                <div id="button-area">
-                    <button id="submit-id" type="submit">Submit</button><br/><br/>
-                    <a class="button" href="student_home.html">Login Success Student</a><br/><br/>
-                    <a class="button" href="teacher_home.html">Login Success Teacher</a><br/><br/>
-                    <a class="button" href="login_fail.html">Login Fail</a><br/><br/>
-                    <a class="button" href="register_student.html">Register (Student)</a><br/><br/>
-                    <a class="button" href="register_teacher.html">Register (Teacher)</a><br/>
-                </div>
+					<div id="button-area">
+						<button id="submit-id" type="submit">Submit</button><br/><br/>
+						<a class="button" href="student_home.html">Login Success Student</a><br/><br/>
+						<a class="button" href="teacher_home.html">Login Success Teacher</a><br/><br/>
+						<a class="button" href="admin_home.html">Login Success Admin</a><br/><br/>
+						<a class="button" href="login_fail.html">Login Fail</a><br/><br/>
+					</div>
 				</form>
 			</div>
 		</div>
