--- a/Project/cooking_course_info_teacher.html
+++ b/Project/cooking_course_info_teacher.html
@@ -52,7 +52,7 @@
                                 </li>
 				
                         </ul>
-			<div id = "login"><a href = "edit_a_class.html">Edit Course Info</a></div>
+			<div class = "edit_course_info_a"><a href = "edit_a_class.html">Edit Course Info</a></div>
 
                 </div>
         
