--- a/Project/register_student_fail.html
+++ b/Project/register_student_fail.html
@@ -18,7 +18,7 @@
 			
 			<div id="content">
 
-				<span class="title">Register</span>
+				<span class="error">Register Fail! Please try again.</span>
 				<form id="form-id" method="POST" action="http://webdevbasics.net/scripts/demo.php">
 					<label for="firstname-id">First Name:</label>
 					<input id="firstname-id" class="text-input" type="text" name="firstname" autofocus="autofocus" /><br/><br/>
