--- a/Project/create_success.html
+++ b/Project/create_success.html
@@ -10,7 +10,7 @@
 			<div id="navbar">
 				<div class="nav"><a href="admin_home.html">Home</a></div>
 				<div class="nav"><a href="create_a_class.html">Create Class</a></div>
-				<div class="nav"><a href="create_a_instructor.html">Create Instructor</a></div>
+				<div class="nav"><a href="create_instructor.html">Create Instructor</a></div>
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
