Edit Class page changes
- Added Place to Cooking Course Info (Teacher) pages
- Edit Class Fail page now has same layout as Edit Class
- Create Success page just has "Cooking For Dummies" instead
- Edit Class now has the "original" values that are being edited
- Min width increased, noticed nav breaking

--- a/Project/cooking_course_info_teacher.html
+++ b/Project/cooking_course_info_teacher.html
@@ -35,6 +35,7 @@
                                         </ul>
                                 </li>
                                 <li class = "listK">Time: Tuesdays/Thursdays, 8:30 p.m.</li>
+								<li class = "listK">Place: EMS 310</li>
                                 <li class = "listK">Course length: 6 months</li>
                                 <li class = "listK">Available Payment Plans:
                                         <ul>
