--- a/Project/create_success_teacher.html
+++ b/Project/create_success_teacher.html
@@ -15,7 +15,7 @@
 				<div id="login" class="nav"><a href="login.html">Log Out</a></div>
 			</div>
 			<div id="content">
-				<span class="success">Bunnies Anonymous class edited successfully!</span><br/><br/>
+				<span class="success">Cooking For Dummies class edited successfully!</span><br/><br/>
 			</div>
 		</div>
 	</body>
