--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -9,19 +9,14 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <title>Default Page</title>
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="infiniteloopgoogleapp">InfiniteLoopGoogleApp</a></td>
-      </tr>
-    </table>
+    <h4>Available Servlets:</h4>
+    <ul>
+    	<li><a href="/infiniteloopgoogleapp">InfiniteLoopGoogleApp</a></li>
+    	<li><a href="/login">Login</a></li>
+    </ul>
   </body>
 </html>
