--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -17,5 +17,11 @@
     <ul>
     	<li><a href="/login">Login</a></li>
     </ul>
+    <h4>Servlets for adding test data:</h4>
+    <ul>
+    	<li><a href="/addUser">Add User</a></li>
+    	<li><a href="/display">Display Entities</a></li>
+    	<li><a href="/clear">Clear Entities</a></li>
+    </ul>
   </body>
 </html>
