--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -16,7 +16,7 @@
     <h4>Available Servlets:</h4>
     <ul>
     	<li><a href="/login">Login</a></li>
-    	<li><a href="/createInstructor">Create an Instructor</a></li>
+    	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
     	<li><a href="/studentCharges">Charges for Students</a></li>
     </ul>
     <h4>Servlets for adding test data:</h4>
