--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -17,7 +17,7 @@
     <ul>
     	<li><a href="/login">Login</a></li>
     	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
-    	<li><a href="/studentCharges">Charges for Students</a></li>
+    	<li><a href="studentCharges.jsp">Charges for Students</a></li>
     </ul>
     <h4>Servlets for adding test data:</h4>
     <ul>
