--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -19,6 +19,7 @@
     	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
     	<li><a href="studentCharges.jsp">Charges for Students</a></li>
     	<li><a href="IssueAward.jsp">Awards</a></li>
+    	<li><a href="/createClass">Create a course</a></li>
     </ul>
     <h4>Servlets for adding test data:</h4>
     <ul>
