--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -17,6 +17,7 @@
     <ul>
     	<li><a href="login.jsp">Login</a></li>
     	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
+    	<li><a href="createStudent.jsp">Create a Student</a></li>
     	<li><a href="StudentChargesServlet">Charges for Students</a></li>
     	<li><a href="IssueAward.jsp">Awards</a></li>
     	<li><a href="/createClass">Create a course</a></li>
