--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -24,7 +24,7 @@
     </ul>
     <h4>Servlets for adding test data:</h4>
     <ul>
-    	<li><a href="/addUser">Add User</a></li>
+    	<li><a href="/createTeacher">Add Teacher</a></li>
     	<li><a href="/display">Display Entities</a></li>
     	<li><a href="/clear">Clear Entities</a></li>
     </ul>
