--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -25,6 +25,7 @@
     <h4>Servlets for adding test data:</h4>
     <ul>
     	<li><a href="/createTeacher">Add Teacher</a></li>
+    	<li><a href="/util/createAdmin.jsp">Add Admin</a></li>
     	<li><a href="/display">Display Entities</a></li>
     	<li><a href="/clear">Clear Entities</a></li>
     </ul>
