--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -17,17 +17,17 @@
     <ul>
     	<li><a href="login.jsp">Login</a></li>
     	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
-    	<li><a href="createStudent.jsp">Create a Student</a></li>
     	<li><a href="StudentChargesServlet">Charges for Students</a></li>
     	<li><a href="IssueAward.jsp">Awards</a></li>
     	<li><a href="/createClass">Create a course</a></li>
     </ul>
     <h4>Servlets for adding test data:</h4>
     <ul>
-    	<li><a href="/createTeacher">Add Teacher</a></li>
-    	<li><a href="/util/createAdmin.jsp">Add Admin</a></li>
-    	<li><a href="/display">Display Entities</a></li>
+        <li><a href="/display">Display Entities</a></li>
     	<li><a href="/clear">Clear Entities</a></li>
+    	<li><a href="/util/createAdmin.jsp">Add Admin</a></li>
+    	<li><a href="/createTeacher">Add Teacher</a></li>
+    	<li><a href="/createStudent">Add Student</a></li>
     </ul>
   </body>
 </html>
