--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -16,6 +16,8 @@
     <h4>Available Servlets:</h4>
     <ul>
     	<li><a href="login.jsp">Login</a></li>
+    	<li><a href="AdminHome">Admin Home</a></li>
+    	<li><a href="StudentHome">Student Home</a></li>
     	<li><a href="createInstructor.jsp">Create an Instructor</a></li>
     	<li><a href="StudentChargesServlet">Charges for Students</a></li>
     	<li><a href="IssueAward.jsp">Awards</a></li>
