trying to fix email

--- a/InfiniteLoopGoogleApp/war/index.html
+++ b/InfiniteLoopGoogleApp/war/index.html
@@ -24,7 +24,7 @@
     	<li><a href="/util/createAdmin.jsp">Add Admin</a></li>
     	<li><a href="/createTeacher">Add Teacher</a></li>
     	<li><a href="/createStudent">Add Student</a></li>
-    	<li><a href="/util/createCharge.jsp">Add Charge</a></li>
+    	<li><a href="/createCharge">Add Charge</a></li>
     </ul>
   </body>
 </html>
